--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,13 @@ version: '2'
 services:
   docker-node:
     build: .
-    command: npm run dev
+    command: npm start
     container_name: docker-node
     volumes:
-      - .:/usr/app
+      - .:/app
     ports:
       - '8080:8080'
+networks:
+  default:
+    external:
+      name: docker-graphql
